language/move-lang/tests/move_check/typing/constraints_not_satisfied_function_parameter.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}

    fun foo(x: CupC<R>) {}
}
